# my-cooking-codex

./: .gitignore  README.md  go.work
api/: Dockerfile  README.md  go.mod  go.sum  main.go
api/config/: config.go  utils.go
api/core/: helpers.go  types.go
api/db/: access.go  constants.go  models.go  types.go  utils.go
api/db/crud/: crud.go
api/routes/: auth.go  media.go  recipes.go  stats.go  users.go  utils.go
api2/: README.md  go.mod  go.sum  main.go
api2/config/: config.go
api2/core/: auth.go
api2/db/: models.go  types.go  utils.go
api2/db/crud/: crud.go
api2/routes/: auth.go  media.go  recipes.go  stats.go  users.go  utils.go
frontend/: .gitignore  Cargo.toml  Dockerfile.pre-built  Trunk.toml  index.html  makefile  package.json
frontend/src/: components.rs  contexts.rs  core.rs  main.rs  modals.rs  pages.rs
frontend/src/components/: card_grid.rs  drawer.rs  header.rs  input.rs  loading.rs  recipe.rs  stats.rs  thumbnail_link_grid.rs  toasts.rs
frontend/src/contexts/: api.rs  login.rs  toasts.rs
frontend/src/core/: api.rs  effects.rs  handlers.rs  storage.rs  types.rs
frontend/src/core/types/: query.rs  recipe.rs  stats.rs  user.rs
frontend/src/modals/: recipe.rs
frontend/src/modals/recipe/: description.rs  image.rs  info.rs  ingredients.rs  long_description.rs  steps.rs  title.rs
frontend/src/pages/: home.rs  login.rs  logout.rs  new_recipe.rs  recipe.rs  recipe_print_view.rs  recipes.rs  signup.rs
