[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
wasm-bindgen = "0.2"
gloo-net = "0.2"
gloo-storage = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlElement",
    "Event",
    "EventTarget",
]
