[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yew-hooks = "0.2.0"
wasm-bindgen = "0.2"
gloo = "0.8"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
url = "2.3"
regex = "1.7"
chrono = { version = "0.4", features = ["serde"] }
serde_url_params = "^0.2.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Location",
    "HtmlElement",
    "Event",
    "EventTarget",
    "MouseEvent",
    "File",
]
